--- a/src/assets/css/app.scss
+++ b/src/assets/css/app.scss
@@ -1,5 +1,5 @@
 body {
-background-color:  #feffef;
+background-color:  #f4f5f7;
 -webkit-font-smoothing: antialiased;
 -moz-osx-font-smoothing: grayscale;
 }
@@ -9,7 +9,7 @@ margin: 0 auto 0 auto;
 }
 
 .headline{
-font-size: 80px;
+font-size: 70px;
 font-family: "Avant Garde", Avantgarde, "Century Gothic", CenturyGothic, AppleGothic, sans-serif;
 font-style: normal;
 font-variant: normal;
@@ -17,8 +17,18 @@ font-weight: 500;
 line-height: 85px
 }
 
+.sub{
+font-size: 20px;
+font-family: "Avant Garde", Avantgarde, "Century Gothic", CenturyGothic, AppleGothic, sans-serif;
+font-style: normal;
+font-variant: normal;
+line-height: 32px;
+color: 	#696969;
+background-color:  #f4f5f7
+}
+
 .body{
-font-size: 22px;
+font-size: 20px;
 font-family: Georgia;
 line-height: 32px
 }
@@ -31,3 +41,22 @@ max-width: 100%;
 display: block;
 margin: 0 auto 0 auto;
 }
+
+.photocredit{
+font-size: 14px;
+font-family: "Avant Garde", Avantgarde, "Century Gothic", CenturyGothic, AppleGothic, sans-serif;
+font-style: normal;
+font-variant: normal;
+line-height: 32px;
+color: 	#696969;
+background-color:  #f4f5f7
+}
+
+.author{
+font-size: 16px;
+font-family: Georgia;
+font-style: italic;
+line-height: 32px;
+}
+
+
